# GhostCoder

./: .gitignore  LICENSE  README.md  audit_report.md  pyproject.toml  selftest.ps1  selftest.sh  test_ghostcoder.py
.ghostcoder/: team.yml
.github/workflows/: ci.yml
docs/: architecture.md  gpu_scaling.md  integrations.md  replay_and_audit.md  skeptic_and_safety.md
ghostcoder/: __init__.py  agents.py  brain.py  config.py  daemon.py  models.py  observer.py  render.py  replay.py  session.py  skeptic.py
ghostcoder/backends/: __init__.py  gpu_tier.py
nvim/lua/: ghostcoder.lua
nvim/lua/ghostcoder/: daemon.lua  hints.lua
nvim/plugin/: ghostcoder.vim
shell/: ghostcoder.bash  ghostcoder.fish  ghostcoder.sh  ghostcoder.zsh
tests/: test_agents.py  test_brain.py  test_gpu_scaling.py  test_models.py  test_observer.py  test_replay.py  test_skeptic.py
vscode/: package-lock.json  package.json
vscode/src/: daemon.ts  decorations.ts  extension.ts
