[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostcoder"
version = "0.1.0"
description = "GhostCoder: An invisible coding partner watching terminal and IDE, dispatching agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "ollama>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]

[project.scripts]
ghostcoder = "ghostcoder.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostcoder*"]
